# schematics_ai_researcher_assignment

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  PROJECT_PLAN.md  README.md  config.py  docker-compose.yml  pyproject.toml
.cursor/rules/: llm-model-note.mdc  logging-standards.mdc  no-hardcoded-values.mdc  pytest-testing.mdc  python-docstrings.mdc  shared-utils-and-import-graph.mdc  strict-typing.mdc  venv-management.mdc
backend/: main.py
backend/api/: config.py  routes.py  schemas.py  session_store.py
backend/core_logic/: agent.py  config.py  deterministic_rules.py  field_mappings.py  information_math.py  question_bank.py  scoring.py
backend/data_generation/: cohort_loader.py  config.py  enums.py  generator.py  latent_factors.py  schemas.py
backend/llm/: client.py  config.py  extractor.py  generator.py
data/cohorts/: cohort_definitions.yaml
docs/: Assignment - AI Researcher.docx
frontend/: api_client.py  app.py
scripts/: run_backend.sh  run_frontend.sh  seed_mock_data.py  seed_mock_data.sh  validate_answer_text_examples.py  validate_statistics.py
tests/: conftest.py
tests/integration/: test_agent_phase3_flow.py  test_api_endpoints.py  test_backend_health_endpoint.py  test_core_logic_phase2_flow.py  test_data_generation_phase1_flow.py  test_frontend_api_client_contract.py  test_generator_statistics.py  test_validate_answer_text_examples.py
tests/unit/: test_agent.py  test_backend_main.py  test_cohort_loader.py  test_data_generation_schemas.py  test_deterministic_rules.py  test_frontend_api_client.py  test_frontend_app.py  (+8 more)
